<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NoteAddFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:gravity="center"
        android:textSize="@dimen/base_text_size"
        android:textColor="@color/black"
        android:text="@string/title"
        />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text_size"
        android:hint="@string/title"
        />

    <TextView
        android:id="@+id/tvTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:gravity="center"
        android:textSize="@dimen/base_text_size"
        android:textColor="@color/black"
        android:text="@string/theme"
        />

    <Spinner
        android:id="@+id/spThemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:contentDescription="@string/theme"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:gravity="center"
        android:textSize="@dimen/base_text_size"
        android:textColor="@color/black"
        android:text="@string/description"
        />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:textSize="@dimen/base_text_size"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/base_margin"
        >

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/base_margin"
            android:text="@string/add"
            />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/base_margin"
            android:text="@string/close"
            />
    </LinearLayout>
</LinearLayout>